fix text align for card layout

--- a/styles_src/q-table.scss
+++ b/styles_src/q-table.scss
@@ -58,7 +58,7 @@
   }
   table td {
     display: block;
-    text-align: right;
+    text-align: right !important;
   }
   table td:before {
     /*
